--- a/comp2007-s2016-lesson-4/Site.Master
+++ b/comp2007-s2016-lesson-4/Site.Master
@@ -28,5 +28,11 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder>
         </div>
     </form>
+    <div style="margin-bottom: 80px"></div>
+    <footer class="navbar navbar-fixed-bottom">
+        <div class="navbar-brand">
+            &copy; 2016 Contoso University
+        </div>
+    </footer>
 </body>
 </html>
